--- a/scss/components/_tile.scss
+++ b/scss/components/_tile.scss
@@ -2,7 +2,7 @@
   // height: $tile-size;
   // width: $tile-size;
   cursor: pointer;
-  perspective: 80px;  //placeholder value
+  perspective: 50px;  //placeholder value
   float:left;
 
   .tile{
@@ -16,12 +16,12 @@
     background-position: center;
     //styling for tiles that have not yet been revealed
       .tile-front{
-        background-color: $tile-color;
         z-index: 10;
+        background-size: contain;
+        background-position: center;
       }
       .tile-back{
         transform: rotateY(180deg);
-        background-color: white;
         background-size: contain;
         background-position: center;
       }
@@ -36,6 +36,7 @@
 
   &.clicked .tile{
     transform: rotateY(180deg);
+
   }
   //a revealed tile with no mine and no information
   &.empty{
